# long-context-attention-kernels

./: .gitignore  CMakeLists.txt  README.md  setup.py
benchmarks/: bench.py
csrc/: bindings.cpp  combine.cu  global_attention.cu  sliding_window_attention.cu
cuda-fusion-compiler/: .gitignore  README.md  requirements.txt
cuda-fusion-compiler/examples/: example_fuse.py
cuda-fusion-compiler/fusion_compiler/: __init__.py  codegen.py  fuser.py  graph.py  jit.py  ops.py
cuda-fusion-compiler/tests/: test_fuser.py
python/long_context_attention/: __init__.py
tests/: test_correctness.py
